/*
 * Copyright 2021 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package quilkin.filters.firewall.v1alpha1;

message Firewall {
  enum Action {
    Allow = 0;
    Deny = 1;
  }

  message PortRange {
    uint32 min = 1;
    uint32 max = 2;
  }

  message Rule {
    Action action = 1;
    repeated string sources = 2;
    repeated PortRange ports = 3;
  }

  repeated Rule on_read = 1;
  repeated Rule on_write = 2;
}

